add changed files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <title>blended JavaScript</title>
 </head>
 <body>
-  <script type="modul" src="./js/lesson.js"></script>
+  <main> 
+    <ul>
+    <li>lesson-1</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</main>
+ 
+  <script src="./js/lesson-1.js"></script>
 </body>
 </html>
