study tasks solution

--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>blended JavaScript</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 <body>
+    <header>
+    <h1 class="header-title">Blended JavaScript</h1>
+  </header>
   
-     <main> 
-      <load src="./partials/lesson-1.html" />
+     <main id="lesson-container"> 
+    
+      <load src="/partials/lesson-1.html" />
    
 </main>
 
 
  
-  <script type="module" src="./js/lesson-1.js"></script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
