solving assignments in lessons, editing project files

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,15 @@
 
 </head>
 <body>
-    <header>
+    <header class="header-wrap">
     <h1 class="header-title">Blended JavaScript</h1>
   </header>
   
      <main id="lesson-container"> 
     
-      <load src="/partials/lesson-1.html" />
+      <load src="partials/lesson-1.html" ></load>
+      <p class="lesson-title">урок 2</p>
+      <load src="partials/lesson-2.html" ></load>
    
 </main>
 
