--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,22 @@
     <header class="header-wrap">
     <h1 class="header-title">Blended JavaScript</h1>
   </header>
+
+  <nav>
+  <ul class="nav-list" id="lesson-list">
+    <li class="lesson-link active" data-lesson="1">Урок 1</li>
+    <li class="lesson-link active" data-lesson="2">Урок 2</li>
+    <li class="lesson-link active" data-lesson="3">Урок 3</li>
+    <li class="lesson-link active" data-lesson="4">Урок 4</li>
+    <li class="lesson-link active" data-lesson="5">Урок 5</li>
+    <li class="lesson-link active" data-lesson="4">Урок 6</li>
+    <li class="lesson-link active" data-lesson="5">Урок 7</li>
+  </ul>
+</nav>
   
      <main id="lesson-container"> 
     
-      <load src="partials/lesson-1.html" ></load>
-      <p class="lesson-title">урок 2</p>
-      <load src="partials/lesson-2.html" ></load>
+  
    
 </main>
 
